# llama-agent-demo-project-24

./: README.md
.devcontainer/: devcontainer.json
llama-deploy-testCase/: main.py  pyproject.toml
llama-deploy-testCase/chroma_db/: chroma.sqlite3
